--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,7 @@
         <androidx.appcompat.widget.Toolbar
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/tollbar"
+            android:id="@+id/toolbar"
             app:menu="@menu/toolbar_menu"
             android:background="@color/Background">
 
