--- a/app/src/main/res/layout/item_signin_dialogue.xml
+++ b/app/src/main/res/layout/item_signin_dialogue.xml
@@ -25,10 +25,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/button_google_signin"
-            android:textColor="@color/Background"
+            android:textColor="@color/Text"
             android:text="Continue with Google"
             android:layout_gravity="center"
-            android:backgroundTint="@color/Text"
+            android:backgroundTint="@color/Secondary"
             android:background="@drawable/button_bg"
             android:minWidth="233dp"
             android:padding="5dp"
