--- a/app/src/main/res/drawable/ripple_effect.xml
+++ b/app/src/main/res/drawable/ripple_effect.xml
@@ -2,17 +2,19 @@
 <ripple
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:color="@android:color/darker_gray"
+    android:color="@color/black"
+    android:radius="2dp"
     tools:targetApi="lollipop">
 
     <item>
-        <shape>
+        <shape
+            android:shape="rectangle"
+            android:visible="true">
+
             <solid
-                android:color="@color/Primary">
+                android:color="@color/white">
             </solid>
-            <corners
-                android:radius="10dp">
-            </corners>
         </shape>
     </item>
+
 </ripple>
